--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <base href="/" />
-    <title>Feature Toggle Application</title>
+    <title>Simple Loan Application</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
